--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,16 @@
 #root {
   margin: 0 ;
-  padding: 0;
+  padding: 3px;
   text-align: center;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+
 }
 body, html {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 #root {
